[tool.poetry]
name = "repl_python3_Projeto-Integrador-II-B-PARTE2"
version = "0.1.0"
description = ""
authors = ["JanquielKappler <<>>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
